# bank_card_detect

./: build.gradle
aar/: openCVLibrary320.aar
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/perfxlab/bankcarddetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/service/: Base64Util.hpp  IWrite.h  WriteFactory.hpp  WriteHertJump.cpp  WriteHertJump.h  WriteImage.cpp  WriteImage.h  WriteService.cpp  WriteService.h  WriteYuv.cpp  WriteYuv.h  server_common.h
app/src/main/cpp/service/container/: SyncQueue.hpp
app/src/main/cpp/service/socket/: SocketServer.h  SocketService.c  commsocket.c
app/src/main/java/com/perfxlab/bankcarddetect/: App.java  RecordActivity.java  SocketManager.java  SplashActivity.java
app/src/main/java/com/perfxlab/bankcarddetect/Bean/: DetectInfo.java
app/src/main/java/com/perfxlab/bankcarddetect/callback/: SurfaceCallBack.java
app/src/main/java/com/perfxlab/bankcarddetect/util/: BitmapUtils.java  CameraUtil.java  ScreenUtil.java  TimeArray.java  ToastUtils.java
app/src/main/java/com/perfxlab/bankcarddetect/widget/: IdenSuccsView.java
app/src/main/java/com/perfxlab/bankcarddetect/wsmanager/: DetectResult.java  IWsManager.java  WsManager.java  WsStatus.java  WsStatusListener.java
app/src/main/res/drawable/: round_rect_bg_blue.xml
app/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_splash.xml  iden_succs_layout.xml  include_camera_container.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/perfxlab/bankcarddetect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
